generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String  @id @default(cuid())
  email     String? @unique
  emailVerifiedAt DateTime?
  phone     String? @unique
  passwordHash String?
  name      String?
  lang      String?
  country   String?
  economyMode Boolean @default(false)
  vendors   VendorMember[]
  favorites Favorite[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Vendor {
  id        String  @id @default(cuid())
  name      String
  country   String
  kycStatus String   @default("pending")
  members   VendorMember[]
  parts     Part[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model VendorMember {
  id        String @id @default(cuid())
  user      User   @relation(fields: [userId], references: [id])
  userId    String
  vendor    Vendor @relation(fields: [vendorId], references: [id])
  vendorId  String
  role      String
  @@unique([userId, vendorId])
}

model VehicleMake {
  id    Int    @id @default(autoincrement())
  name  String @unique
  models VehicleModel[]
}

model VehicleModel {
  id      Int          @id @default(autoincrement())
  name    String
  make    VehicleMake  @relation(fields: [makeId], references: [id])
  makeId  Int
  years   VehicleYear[]
  @@unique([makeId, name])
}

model VehicleYear {
  id      Int          @id @default(autoincrement())
  year    Int
  model   VehicleModel @relation(fields: [modelId], references: [id])
  modelId Int
  engines EngineSpec[]
  @@unique([modelId, year])
}

model EngineSpec {
  id       Int         @id @default(autoincrement())
  code     String
  fuel     String?
  capacityL Float?
  powerHp  Int?
  year     VehicleYear @relation(fields: [yearId], references: [id])
  yearId   Int
  fitments PartFitment[]
  @@unique([yearId, code])
}

model Part {
  id          String @id @default(cuid())
  vendor      Vendor @relation(fields: [vendorId], references: [id])
  vendorId    String
  title       String
  description String?
  oemRefs     String[]
  condition   String
  priceCents  Int
  currency    String
  stock       Int      @default(1)
  status      String   @default("active")
  country     String?
  city        String?
  images      PartImage[]
  fitments    PartFitment[]
  favorites   Favorite[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  @@index([vendorId])
}

model PartImage {
  id        String @id @default(cuid())
  part      Part   @relation(fields: [partId], references: [id])
  partId    String
  url       String
  position  Int     @default(0)
}

model PartFitment {
  id       String    @id @default(cuid())
  part     Part      @relation(fields: [partId], references: [id])
  partId   String
  engine   EngineSpec @relation(fields: [engineId], references: [id])
  engineId Int
  @@unique([partId, engineId])
}

model Favorite {
  id      String @id @default(cuid())
  user    User   @relation(fields: [userId], references: [id])
  userId  String
  part    Part   @relation(fields: [partId], references: [id])
  partId  String
  @@unique([userId, partId])
}

model Order {
  id        String @id @default(cuid())
  user      User?  @relation(fields: [userId], references: [id])
  userId    String?
  status    String @default("pending")
  items     OrderItem[]
  payments  Payment[]
  shipments Shipment[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model OrderItem {
  id       String @id @default(cuid())
  order    Order  @relation(fields: [orderId], references: [id])
  orderId  String
  vendor   Vendor @relation(fields: [vendorId], references: [id])
  vendorId String
  part     Part   @relation(fields: [partId], references: [id])
  partId   String
  qty      Int    @default(1)
  priceCents Int
  currency   String
}

model Payment {
  id        String @id @default(cuid())
  order     Order  @relation(fields: [orderId], references: [id])
  orderId   String
  provider  String
  txRef     String @unique
  status    String @default("pending")
  amountCents Int
  currency  String
  createdAt DateTime @default(now())
}

model Shipment {
  id        String @id @default(cuid())
  order     Order  @relation(fields: [orderId], references: [id])
  orderId   String
  vendor    Vendor @relation(fields: [vendorId], references: [id])
  vendorId  String
  status    String @default("preparing")
  carrier   String?
  tracking  String?
  pickupPin String?
  createdAt DateTime @default(now())
}
